deploy/argocd/apps/jaeger/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jaeger
  labels:
    istio.io/dataplane-mode: ambient
